--- a/Activity_Discover_what_is_in_your_dataset.ipynb
+++ b/Activity_Discover_what_is_in_your_dataset.ipynb
@@ -20,7 +20,9 @@
         "\n",
         "## Unicorn Companies EDA\n",
         "\n",
-        "**Author:** André Marinho"
+        "**Author:** André Marinho\n",
+        "\n",
+        "<p align=\"center\"><img src=\"https://www.battery.com/wp-content/uploads/2022/04/DT-Unicorn-221-scaled.jpg\" >"
       ],
       "id": "1WD1hC5MTRMS"
     },
