--- a/Activity_Validate_and_clean_your_data.ipynb
+++ b/Activity_Validate_and_clean_your_data.ipynb
@@ -20,7 +20,9 @@
         "\n",
         "## Unicorn Companies - Data Validation and Cleaning\n",
         "\n",
-        "**Author**: André Marinho Moreira"
+        "**Author**: André Marinho Moreira\n",
+        "\n",
+        "<p align=\"center\"><img src=\"https://www.battery.com/wp-content/uploads/2022/04/DT-Unicorn-221-scaled.jpg\" >"
       ],
       "id": "1WD1hC5MTRMS"
     },
