--- a/Activity_Perform_feature_engineering.ipynb
+++ b/Activity_Perform_feature_engineering.ipynb
@@ -16,7 +16,7 @@
         "id": "yugMU9MjJtBl"
       },
       "source": [
-        "# Activity: Perform feature engineering to predict the NBA players career duration\n",
+        "# Activity: Perform feature engineering to to determine which features will most effectively predict the NBA players career duration\n",
         "\n",
         "<p align=\"center\"><img src=\"https://wallpapercat.com/w/full/4/c/5/921784-1920x1200-desktop-hd-nba-wallpaper-image.jpg\" >\n",
         "\n",
