--- a/Activity_Build_an_XGBoost_model_André_Marinho.ipynb
+++ b/Activity_Build_an_XGBoost_model_André_Marinho.ipynb
@@ -18,7 +18,10 @@
       "source": [
         "# Activity: Build an XGBoost model to predict customer satisfaction for an Airline company\n",
         "\n",
-        "<p align=\"center\"><img src=\"https://cdn.shopify.com/s/files/1/0657/3100/2634/files/Papier_peint_avion_Decollage_en_style_pop_art_et_colore.jpg?v=1712910949\" >\n"
+        "<p align=\"center\"><img src=\"https://cdn.shopify.com/s/files/1/0657/3100/2634/files/Papier_peint_avion_Decollage_en_style_pop_art_et_colore.jpg?v=1712910949\" >\n",
+        "\n",
+        "\n",
+        "Author: André Marinho"
       ]
     },
     {
