--- a/TikTok_Project_Initial_EDA_Analysis.ipynb
+++ b/TikTok_Project_Initial_EDA_Analysis.ipynb
@@ -16,9 +16,11 @@
         "id": "DtNBZFHO3M7n"
       },
       "source": [
-        "# **TikTok Project: Initial EDA Analysis**\n",
+        "# **TikTok Project: Initial Exploratory Data Analysis**\n",
         "\n",
         "<p align=\"center\"><img src=\"https://logodownload.org/wp-content/uploads/2019/08/tiktok-logo-9.png\" height=\"150px\">\n",
+        "\n",
+        "**Author**: André Marinho\n",
         "\n",
         "**Course 2 - Get Started with Python**"
       ]
